test/files/ill-typed/1.lam
if (2 - (1 + 1)) then true else false
if (2 - (1 + true)) then true else false
